[package]
authors = ["Jason Wolfe <https://squaredx.dev>"]
name = "boa-checker-snek"
version = "1.0.0"
edition = "2018"

homepage = "https://squaredx.dev"
repository = "https://github.com/squaredx/boa-checker-snek"

readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.1"
rand = "0.8.5"
